test/libhyperion/syntaxTests/dataLocations/data_location_in_function_type.hyp
library L {
    struct Nested { uint y; }
    function c(function(Nested memory) external returns (uint)[] storage) external pure {}
}
// ----
// TypeError 4888: (57-114): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
